--- a/2020/2020-09-22/himalayan_climbers.qmd
+++ b/2020/2020-09-22/himalayan_climbers.qmd
@@ -23,6 +23,10 @@ Dowload the weekly data and make available in the `tt` object.
 ```{r Load}
 tt <- tt_load("2020-09-22")
 
+peaks <- tt$peaks
+members <- tt$members
+expeditions <- tt$expeditions
+
 peaks <- tt$peaks %>%
   rename(height_meters = height_metres)
 
